--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-    knitr (>=1.31)
+    knitr (>= 1.31),
     magrittr,
     here,
     rmarkdown,
